commit 2 - add new pages

--- a/bonus.html
+++ b/bonus.html
@@ -2,7 +2,7 @@
 <html lang="ru">
 
 <head>
-	<title>Ice casino</title>
+	<title>Ice casino - bonus game</title>
 	<meta charset="UTF-8">
 	<meta name="format-detection" content="telephone=no">
 	<!-- <style>body{opacity: 0;}</style> -->
@@ -71,43 +71,76 @@
 		</div>
 	</div>
 	<div class="wrapper">
-		<div class="wrapper__main main">
-			<div class="main__icon">
-				<img src="img/main/icon-main.svg" alt="Icon">
-			</div>
-			<div class="main__buttons">
-				<div class="main__mini-game">
-					<div class="main__image">
-						<picture><source srcset="img/main/btn-image-mingame.webp" type="image/webp"><img src="img/main/btn-image-mingame.png" alt="Image"></picture>
-					</div>
-					<a href="bonus.html" class="main__button-mini-game">
-						<img src="img/main/btn-play.svg" alt="Icon">
+		<div class="wrapper__bonus bonus">
+			<div class="bonus__header header">
+				<div class="header__row">
+					<a href="index.html" class="header__button">
+						<img src="img/icons/arrow-left.svg" alt="Icon">
 					</a>
+					<div class="header__text">Сrush the ice</div>
 				</div>
-				<div class="main__box-casino">
-					<div class="main__item">
-						<div class="main__trend">
-							<p>Trending</p>
+			</div>
+			<div class="bonus__body">
+				<div class="bonus__top top-bonus">
+					<div class="top-bonus__grid">
+						<div class="top-bonus__item"></div>
+						<div class="top-bonus__item">
+							<div class="top-bonus__points">
+								<img src="img/mini-game/cents-bg.svg" alt="Icon">
+								<div class="top-bonus__money money text-minigame">500</div>
+								<div class="top-bonus__icon">
+									<img src="img/mini-game/cents.svg" alt="Icon">
+								</div>
+							</div>
 						</div>
-						<div class="main__sub-image">
-							<picture><source srcset="img/main/Image_btn-slot-1.webp" type="image/webp"><img src="img/main/Image_btn-slot-1.png" alt="Image"></picture>
+						<div class="top-bonus__item">
+							<div class="top-bonus__stars">
+								<img src="img/mini-game/stars.svg" alt="Icon">
+							</div>
 						</div>
-						<div class="main__name">STARBURS</div>
-						<a href="game-one.html" class="main__button main__button_game-1">
-							<img src="img/main/btn-slot-play.svg" alt="Icon">
-						</a>
 					</div>
-					<div class="main__item">
-						<div class="main__trend">
-							<p>Trending</p>
+				</div>
+				<div class="bonus__main bonus-main">
+					<!-- <div class="bonus-main__monets">
+						<img src="img/mini-game/cent-1.svg" alt="">
+						<img src="img/mini-game/cent-2.svg" alt="">
+						<img src="img/mini-game/cent-3.svg" alt="">
+						<img src="img/mini-game/cent-4.svg" alt="">
+					</div>
+					<div class="bonus-main__text">+500</div> -->
+					<!-- <div class="bonus-main__cherry">
+						<img src="img/mini-game/cherry.svg" alt="">
+					</div> -->
+					<div class="bonus-main__body">
+						<div class="bonus-main__conveyor">
+							<img src="img/mini-game/conveyor.svg" alt="Image">
 						</div>
-						<div class="main__sub-image">
-							<picture><source srcset="img/main/Image_btn-slot-2.webp" type="image/webp"><img src="img/main/Image_btn-slot-2.png" alt="Image"></picture>
+						<div class="bonus-main__hammer">
+							<img src="img/mini-game/hammer.svg" alt="Image">
 						</div>
-						<div class="main__name">Fruit Machine</div>
-						<a href="game-two.html" class="main__button main__button_game-2">
-							<img src="img/main/btn-slot-play.svg" alt="Icon">
-						</a>
+					</div>
+				</div>
+				<div class="bonus__bottom bottom-bonus">
+					<div class="bottom-bonus__grid">
+						<div class="bottom-bonus__item">
+							<div class="bottom-bonus__ways">
+								<img src="img/mini-game/bg-other-minigame.svg" alt="Icon">
+								<div class="bottom-bonus__count-ways text-minigame">6000</div>
+								<div class="bottom-bonus__text">ways</div>
+							</div>
+						</div>
+						<div class="bottom-bonus__item">
+							<div class="bottom-bonus__button">
+								<img src="img/mini-game/btn-minigame.svg" alt="Icon">
+							</div>
+						</div>
+						<div class="bottom-bonus__item">
+							<div class="bottom-bonus__bet">
+								<img src="img/mini-game/bg-other-minigame.svg" alt="Icon">
+								<div class="bottom-bonus__count-bet text-minigame">$ 10.00</div>
+								<div class="bottom-bonus__text">total bet</div>
+							</div>
+						</div>
 					</div>
 				</div>
 			</div>
