--- a/game-one.html
+++ b/game-one.html
@@ -6,7 +6,7 @@
 	<meta charset="UTF-8">
 	<meta name="format-detection" content="telephone=no">
 	<!-- <style>body{opacity: 0;}</style> -->
-	<link rel="stylesheet" href="css/style.min.css?_v=20220328234230">
+	<link rel="stylesheet" href="css/style.min.css?_v=20220329234541">
 	<link rel="shortcut icon" href="favicon.ico">
 	<!-- <meta name="robots" content="noindex, nofollow"> -->
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -89,44 +89,44 @@
 							</div>
 							<div class="game__cont">
 								<div id="slot1" class="game__column">
-									<div data-num="1" class="game__item game__item_1">
+									<div class="game__item game__item_1">
 										<picture><source srcset="img/game1/slot1-1.webp" type="image/webp"><img src="img/game1/slot1-1.png" alt="Image"></picture>
 									</div>
-									<div data-num="2" class="game__item game__item_2">
+									<div class="game__item game__item_2">
 										<picture><source srcset="img/game1/slot1-2.webp" type="image/webp"><img src="img/game1/slot1-2.png" alt="Image"></picture>
 									</div>
-									<div data-num="3" class="game__item game__item_3">
+									<div class="game__item game__item_3">
 										<picture><source srcset="img/game1/slot1-3.webp" type="image/webp"><img src="img/game1/slot1-3.png" alt="Image"></picture>
 									</div>
-									<div data-num="4" class="game__item game__item_4">
+									<div class="game__item game__item_4">
 										<picture><source srcset="img/game1/slot1-4.webp" type="image/webp"><img src="img/game1/slot1-4.png" alt="Image"></picture>
 									</div>
 								</div>
 								<div id="slot2" class="game__column">
-									<div data-num="1" class="game__item game__item_1">
+									<div class="game__item game__item_1">
 										<picture><source srcset="img/game1/slot1-1.webp" type="image/webp"><img src="img/game1/slot1-1.png" alt="Image"></picture>
 									</div>
-									<div data-num="2" class="game__item game__item_2">
+									<div class="game__item game__item_2">
 										<picture><source srcset="img/game1/slot1-2.webp" type="image/webp"><img src="img/game1/slot1-2.png" alt="Image"></picture>
 									</div>
-									<div data-num="3" class="game__item game__item_3">
+									<div class="game__item game__item_3">
 										<picture><source srcset="img/game1/slot1-3.webp" type="image/webp"><img src="img/game1/slot1-3.png" alt="Image"></picture>
 									</div>
-									<div data-num="4" class="game__item game__item_4">
+									<div class="game__item game__item_4">
 										<picture><source srcset="img/game1/slot1-4.webp" type="image/webp"><img src="img/game1/slot1-4.png" alt="Image"></picture>
 									</div>
 								</div>
 								<div id="slot3" class="game__column">
-									<div data-num="1" class="game__item game__item_1">
+									<div class="game__item game__item_1">
 										<picture><source srcset="img/game1/slot1-1.webp" type="image/webp"><img src="img/game1/slot1-1.png" alt="Image"></picture>
 									</div>
-									<div data-num="2" class="game__item game__item_2">
+									<div class="game__item game__item_2">
 										<picture><source srcset="img/game1/slot1-2.webp" type="image/webp"><img src="img/game1/slot1-2.png" alt="Image"></picture>
 									</div>
-									<div data-num="3" class="game__item game__item_3">
+									<div class="game__item game__item_3">
 										<picture><source srcset="img/game1/slot1-3.webp" type="image/webp"><img src="img/game1/slot1-3.png" alt="Image"></picture>
 									</div>
-									<div data-num="4" class="game__item game__item_4">
+									<div class="game__item game__item_4">
 										<picture><source srcset="img/game1/slot1-4.webp" type="image/webp"><img src="img/game1/slot1-4.png" alt="Image"></picture>
 									</div>
 								</div>
@@ -147,7 +147,7 @@
 								<div class="footer-game__bg">
 									<img src="img/game1/game1-btn-money.svg" alt="Icon">
 								</div>
-								<div class="footer-game__count-money">500</div>
+								<div class="footer-game__count-money money">500</div>
 							</div>
 						</div>
 					</div>
@@ -155,7 +155,7 @@
 			</div>
 		</div>
 	</div>
-	<script src="js/app.min.js?_v=20220328234230"></script>
+	<script src="js/app.min.js?_v=20220329234541"></script>
 </body>
 
 </html>
